--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
 	"main": "server.js",
 	"scripts": {
 		"build": "tsc",
-		"start": "node server.js",
+		"start": "node dist/src/index.js",
 		"lint": "eslint . --ext .ts"
 	},
 	"keywords": [],
